<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SignUpActivity">

    <Button
        android:id="@+id/btn_return_sign_up"
        style="@style/ButtonReturnForm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_return_sign_up">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_header_sign_up"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:tint="@android:color/white"
                app:srcCompat="@drawable/acdr_login"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_name_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/bg_rounded"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    tools:ignore="AutoFill" />

                <EditText
                    android:id="@+id/edt_email_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/bg_rounded"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    tools:ignore="AutoFill" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/bg_rounded"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@android:color/white">

                    <EditText
                        android:id="@+id/edt_password_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        tools:ignore="AutoFill" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="32dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/btn_sign_up"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:background="@drawable/bg_btn_rounded"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/txt_sign_up"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/sign_in"
                            android:textAllCaps="true"
                            android:textColor="@android:color/white"
                            android:textSize="18sp" />

                        <ProgressBar
                            android:id="@+id/progress_bar_sign_up"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:visibility="gone" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>